fixing more problems